--- a/html/about.html
+++ b/html/about.html
@@ -71,7 +71,7 @@
             <li id="exp" class="resumeListHeading">
                 Experience
                 <ul>
-                    <li> Founder of Successful Startup at BYU</li>
+                    <li> Startups </li>
                     <li> Sales</li>
                 </ul>
              </li>
@@ -94,15 +94,11 @@
 <!-- Footer-->
         <footer>
             <div class="small text-center text-muted fst-italic">
-                
+                See my <a href="https://www.linkedin.com/in/ty-easton-a23416200/" target="_blank" title="LinkedIn Page on Ty Easton">LinkedIn</a> Page.
             <div class="small text-center text-muted fst-italic">Ty Easton | (801)-541-7661 | tylereaston32@gmail.com</div>
-        </footer>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2022</div>
-                    </div>
-                </div>
-            </div>
-        </footer>
+            <a href="#top">back to top</a>
         
+
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
