--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
 <!-- Footer-->
         <footer>
             <div class="small text-center text-muted fst-italic">
-                See my <a href="https://www.linkedin.com/in/ty-easton-a23416200/" target="_blank" title="LinkedIn Page on Avery King">LinkedIn</a> Page.
+                See my <a href="https://www.linkedin.com/in/ty-easton-a23416200/" target="_blank" title="LinkedIn Page on Ty Easton">LinkedIn</a> Page.
                 <p>&nbsp;</p>
             <div class="small text-center text-muted fst-italic">Ty Easton | (801)-541-7661 | tylereaston32@gmail.com</div>
+            <a href="#top">back to top</a>
         </footer>
 
         <!-- Bootstrap core JS-->
